RESOLVED FIXED279806
ASSERTION FAILED: !isHashTraitsEmptyValue<KeyTraits>(key) under WebCore::SWServer::scheduleJob
https://bugs.webkit.org/show_bug.cgi?id=279806
Summary ASSERTION FAILED: !isHashTraitsEmptyValue<KeyTraits>(key) under WebCore::SWSe...
Fujii Hironori
Reported 2024-09-16 19:05:01 PDT
1. Start Windows Debug MiniBrowser 2. Load https://www.yomiuri.co.jp/ 3. Crash ASSERTION FAILED: !isHashTraitsEmptyValue<KeyTraits>(key) C:\webkit\wb\WebKitBuild\Debug\WTF\Headers\wtf/HashTable.h(649) : void WTF::HashTable<WebCore::ServiceWorkerRegistrationKey, WTF::KeyValuePair<WebCore::ServiceWorkerRegistrationKey, WTF::WeakRef<WebCore::SWServerRegistration>>, WTF::KeyValuePairKeyExtractor<WTF::KeyValuePair<WebCore::ServiceWorkerRegistrationKey, WTF::WeakRef<WebCore::SWServerRegistration>>>, WTF::DefaultHash<WebCore::ServiceWorkerRegistrationKey>, WTF::HashMap<WebCore::ServiceWorkerRegistrationKey, WTF::WeakRef<WebCore::SWServerRegistration>>::KeyValuePairTraits, WTF::HashTraits<WebCore::ServiceWorkerRegistrationKey>>::checkKey(const T &) [Key = WebCore::ServiceWorkerRegistrationKey, Value = WTF::KeyValuePair<WebCore::ServiceWorkerRegistrationKey, WTF::WeakRef<WebCore::SWServerRegistration>>, Extractor = WTF::KeyValuePairKeyExtractor<WTF::KeyValuePair<WebCore::ServiceWorkerRegistrationKey, WTF::WeakRef<WebCore::SWServerRegistration>>>, HashFunctions = WTF::DefaultHash<WebCore::ServiceWorkerRegistrationKey>, Traits = WTF::HashMap<WebCore::Se1 00007FFB6291B873 WTF::HashTable<WebCore::ServiceWorkerRegistrationKey,WTF::KeyValuePair<WebCore::ServiceWorkerRegistrationKey,WTF::WeakRef<WebCore::SWServerRegistration,WTF::DefaultWeakPtrImpl> >,WTF::KeyValuePairKeyExtractor<WTF::KeyValuePair<WebCore::ServiceWorkerRegistrationKey,WTF::WeakRef<WebCore::SWServerRegistration,WTF::DefaultWeakPtrImpl> > >,WTF::DefaultHash<WebCore::ServiceWorkerRegistrationKey>,WTF::HashMap<WebCore::ServiceWorkerRegistrationKey,WTF::WeakRef<WebCore::SWServerRegistration,WTF::DefaultWeakPtrImpl>,WTF::DefaultHash<WebCore::ServiceWorkerRegistrationKey>,WTF::HashTraits<WebCore::ServiceWorkerRegistrationKey>,WTF::HashTraits<WTF::WeakRef<WebCore::SWServerRegistration,WTF::DefaultWeakPtrImpl> >,WTF::HashTableTraits>::KeyValuePairTraits,WTF::HashTraits<WebCore::ServiceWorkerRegistrationKey> >::checkKey<WTF::IdentityHashTranslator<WTF::HashMap<WebCore::ServiceWorkerRegistrationKey,WTF::WeakRef<WebCore::SWServerRegistration,WTF::DefaultWeakPtrImpl>,WTF::DefaultHash<WebCore::ServiceWork2 00007FFB6291B712 WTF::HashTable<WebCore::ServiceWorkerRegistrationKey,WTF::KeyValuePair<WebCore::ServiceWorkerRegistrationKey,WTF::WeakRef<WebCore::SWServerRegistration,WTF::DefaultWeakPtrImpl> >,WTF::KeyValuePairKeyExtractor<WTF::KeyValuePair<WebCore::ServiceWorkerRegistrationKey,WTF::WeakRef<WebCore::SWServerRegistration,WTF::DefaultWeakPtrImpl> > >,WTF::DefaultHash<WebCore::ServiceWorkerRegistrationKey>,WTF::HashMap<WebCore::ServiceWorkerRegistrationKey,WTF::WeakRef<WebCore::SWServerRegistration,WTF::DefaultWeakPtrImpl>,WTF::DefaultHash<WebCore::ServiceWorkerRegistrationKey>,WTF::HashTraits<WebCore::ServiceWorkerRegistrationKey>,WTF::HashTraits<WTF::WeakRef<WebCore::SWServerRegistration,WTF::DefaultWeakPtrImpl> >,WTF::HashTableTraits>::KeyValuePairTraits,WTF::HashTraits<WebCore::ServiceWorkerRegistrationKey> >::inlineLookup<WTF::IdentityHashTranslator<WTF::HashMap<WebCore::ServiceWorkerRegistrationKey,WTF::WeakRef<WebCore::SWServerRegistration,WTF::DefaultWeakPtrImpl>,WTF::DefaultHash<WebCore::Service3 00007FFB6291B6DD WTF::HashTable<WebCore::ServiceWorkerRegistrationKey,WTF::KeyValuePair<WebCore::ServiceWorkerRegistrationKey,WTF::WeakRef<WebCore::SWServerRegistration,WTF::DefaultWeakPtrImpl> >,WTF::KeyValuePairKeyExtractor<WTF::KeyValuePair<WebCore::ServiceWorkerRegistrationKey,WTF::WeakRef<WebCore::SWServerRegistration,WTF::DefaultWeakPtrImpl> > >,WTF::DefaultHash<WebCore::ServiceWorkerRegistrationKey>,WTF::HashMap<WebCore::ServiceWorkerRegistrationKey,WTF::WeakRef<WebCore::SWServerRegistration,WTF::DefaultWeakPtrImpl>,WTF::DefaultHash<WebCore::ServiceWorkerRegistrationKey>,WTF::HashTraits<WebCore::ServiceWorkerRegistrationKey>,WTF::HashTraits<WTF::WeakRef<WebCore::SWServerRegistration,WTF::DefaultWeakPtrImpl> >,WTF::HashTableTraits>::KeyValuePairTraits,WTF::HashTraits<WebCore::ServiceWorkerRegistrationKey> >::lookup<WTF::IdentityHashTranslator<WTF::HashMap<WebCore::ServiceWorkerRegistrationKey,WTF::WeakRef<WebCore::SWServerRegistration,WTF::DefaultWeakPtrImpl>,WTF::DefaultHash<WebCore::ServiceWorker4 00007FFB6291B69B WTF::HashTable<WebCore::ServiceWorkerRegistrationKey,WTF::KeyValuePair<WebCore::ServiceWorkerRegistrationKey,WTF::WeakRef<WebCore::SWServerRegistration,WTF::DefaultWeakPtrImpl> >,WTF::KeyValuePairKeyExtractor<WTF::KeyValuePair<WebCore::ServiceWorkerRegistrationKey,WTF::WeakRef<WebCore::SWServerRegistration,WTF::DefaultWeakPtrImpl> > >,WTF::DefaultHash<WebCore::ServiceWorkerRegistrationKey>,WTF::HashMap<WebCore::ServiceWorkerRegistrationKey,WTF::WeakRef<WebCore::SWServerRegistration,WTF::DefaultWeakPtrImpl>,WTF::DefaultHash<WebCore::ServiceWorkerRegistrationKey>,WTF::HashTraits<WebCore::ServiceWorkerRegistrationKey>,WTF::HashTraits<WTF::WeakRef<WebCore::SWServerRegistration,WTF::DefaultWeakPtrImpl> >,WTF::HashTableTraits>::KeyValuePairTraits,WTF::HashTraits<WebCore::ServiceWorkerRegistrationKey> >::contains<WTF::IdentityHashTranslator<WTF::HashMap<WebCore::ServiceWorkerRegistrationKey,WTF::WeakRef<WebCore::SWServerRegistration,WTF::DefaultWeakPtrImpl>,WTF::DefaultHash<WebCore::ServiceWork5 00007FFB6291B64D WTF::HashTable<WebCore::ServiceWorkerRegistrationKey,WTF::KeyValuePair<WebCore::ServiceWorkerRegistrationKey,WTF::WeakRef<WebCore::SWServerRegistration,WTF::DefaultWeakPtrImpl> >,WTF::KeyValuePairKeyExtractor<WTF::KeyValuePair<WebCore::ServiceWorkerRegistrationKey,WTF::WeakRef<WebCore::SWServerRegistration,WTF::DefaultWeakPtrImpl> > >,WTF::DefaultHash<WebCore::ServiceWorkerRegistrationKey>,WTF::HashMap<WebCore::ServiceWorkerRegistrationKey,WTF::WeakRef<WebCore::SWServerRegistration,WTF::DefaultWeakPtrImpl>,WTF::DefaultHash<WebCore::ServiceWorkerRegistrationKey>,WTF::HashTraits<WebCore::ServiceWorkerRegistrationKey>,WTF::HashTraits<WTF::WeakRef<WebCore::SWServerRegistration,WTF::DefaultWeakPtrImpl> >,WTF::HashTableTraits>::KeyValuePairTraits,WTF::HashTraits<WebCore::ServiceWorkerRegistrationKey> >::contains 6 00007FFB628F460D WTF::HashMap<WebCore::ServiceWorkerRegistrationKey,WTF::WeakRef<WebCore::SWServerRegistration,WTF::DefaultWeakPtrImpl>,WTF::DefaultHash<WebCore::ServiceWorkerRegistrationKey>,WTF::HashTraits<WebCore::ServiceWorkerRegistrationKey>,WTF::HashTraits<WTF::WeakRef<WebCore::SWServerRegistration,WTF::DefaultWeakPtrImpl> >,WTF::HashTableTraits>::contains 7 00007FFB628C789F WebCore::SWServer::scheduleJob 8 00007FFB5B08E899 WebKit::WebSWServerConnection::scheduleJobInServer 9 00007FFB5A4C2810 IPC::callMemberFunction<WebKit::WebSWServerConnection,WebKit::WebSWServerConnection,void (WebCore::ServiceWorkerJobData &&),std::tuple<WebCore::ServiceWorkerJobData> >::<lambda_1>::operator()<WebCore::ServiceWorkerJobData> 10 00007FFB5A4C27BD std::invoke<`lambda at C:\webkit\wb\Source\WebKit\Platform\IPC\HandleMessage.h:134:9',WebCore::ServiceWorkerJobData> 11 00007FFB5A4C279A std::_Apply_impl<`lambda at C:\webkit\wb\Source\WebKit\Platform\IPC\HandleMessage.h:134:9',std::tuple<WebCore::ServiceWorkerJobData>,0> 12 00007FFB5A4C2762 std::apply<`lambda at C:\webkit\wb\Source\WebKit\Platform\IPC\HandleMessage.h:134:9',std::tuple<WebCore::ServiceWorkerJobData> > 13 00007FFB5A4C19CF IPC::callMemberFunction<WebKit::WebSWServerConnection,WebKit::WebSWServerConnection,void (WebCore::ServiceWorkerJobData &&),std::tuple<WebCore::ServiceWorkerJobData> > 14 00007FFB5A4BE323 IPC::handleMessage<Messages::WebSWServerConnection::ScheduleJobInServer,WebKit::WebSWServerConnection,WebKit::WebSWServerConnection,void (WebCore::ServiceWorkerJobData &&)> 15 00007FFB5A4BB01F WebKit::WebSWServerConnection::didReceiveMessage 16 00007FFB5AEB2DD1 WebKit::NetworkConnectionToWebProcess::didReceiveMessage 17 00007FFB5B285503 IPC::Connection::dispatchMessage 18 00007FFB5B2857A2 IPC::Connection::dispatchMessage 19 00007FFB5B285ACD IPC::Connection::dispatchOneIncomingMessage 20 00007FFB5B28B39B IPC::Connection::enqueueIncomingMessage::<lambda_7>::operator() 21 00007FFB5B28B337 WTF::Detail::CallableWrapper<`lambda at C:\webkit\wb\Source\WebKit\Platform\IPC\Connection.cpp:1356:31',void>::call 22 00007FFB56C93909 WTF::Function<void ()>::operator() 23 00007FFB57CEBB1A WTF::RunLoop::performWork 24 00007FFB57E9166D WTF::RunLoop::wndProc 25 00007FFB57E91567 WTF::RunLoop::RunLoopWndProc 26 00007FFC132682E1 DispatchMessageW 27 00007FFC13267DA1 DispatchMessageW 28 00007FFB57E9190D WTF::RunLoop::run 29 00007FFB5A16CB93 WebKit::AuxiliaryProcessMainBase<WebKit::NetworkProcess,0>::run 30 00007FFB5A16CA47 WebKit::AuxiliaryProcessMain<WebKit::NetworkProcessMainCurl> 31 00007FFB5A16C9EB WebKit::NetworkProcessMain Exception thrown at 0x00007FFB57C670A5 (JavaScriptCore.dll) in WebKitNetworkProcess.exe: 0xC0000005: Access violation writing location 0x00000000BBADBEEF.
Attachments
Fujii Hironori
Comment 2 2024-09-16 19:47:33 PDT
EWS
Comment 3 2024-09-16 21:37:29 PDT
Committed 283744@main (5434ca72afd2): <https://commits.webkit.org/283744@main> Reviewed commits have been landed. Closing PR #33746 and removing active labels.
Radar WebKit Bug Importer
Comment 4 2024-09-16 21:38:14 PDT
Note You need to log in before you can comment on or make changes to this bug.