Fix use-after-move in SWServer::scheduleJob https://bugs.webkit.org/show_bug.cgi?id=279806

Reviewed by Chris Dumez.

`jobData` was used after move in SWServer::scheduleJob for Windows
port.

* Source/WebCore/workers/service/server/SWServer.cpp:
(WebCore::SWServer::scheduleJob):

Canonical link: https://commits.webkit.org/283744@main